@@ -8,7 +8,7 @@ public class FindLetter {
     public static void main(String[] args) {
         String[] words = {"Apple", "Banana", "Watermelon", "wolf", "Wombat", "car", "Wine"};
 
-        List<String> wordList = Arrays.asList(words);
+        List<String> wordList = Arrays.asList(words); // Мы еще не проходили коллекции, сам решал или всемогущий интернет помог? Замени String[] words + Arrays.asList(words) на List<String> wordList = List.of("Apple",...) будет красивее
 
         List<String> filteredWords = new ArrayList<>();
 
@@ -19,6 +19,10 @@ public class FindLetter {
             }
         }
 
+        /* Пока не используй коллекции,
+        из-за того что пока не знаешь как пользоваться инструментом делаешь много лишних преобразований,
+        двух массивов было бы достаточно для решения задачи
+         */
         String[] filteredArray = filteredWords.toArray(new String[0]);
 
         System.out.println(" Arraylist with letter 'W' or 'w': ");
